--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== README - updated
+Test Blog Rails App - TechieWiz
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
